--- a/templates/index.html
+++ b/templates/index.html
@@ -710,7 +710,8 @@
     </footer>
 
     <script>
-        const API_BASE = 'http://127.0.0.1:5000';
+        // Automatically use the correct base URL (works on localhost AND Render/any deployment)
+        const API_BASE = window.location.origin;
         let selectedFile = null;
 
         // Tab Switching
